mType/tests/testFiles/error/error/typeInvalidOperation.mt
string str = "hello";
bool result = str + 10;